<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="clear_all">AC</string>
    <string name="clear">C</string>
    <string name="bracket_open">(</string>
    <string name="bracket_close">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="factorial">x!</string>
    <string name="square">x²</string>
    <string name="sqrt">√</string>
    <string name="inverse">1/x</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="pi">π</string>
    <string name="power">xʸ</string>
    <string name="asin">sin ⁻¹</string>
    <string name="acos">cos ⁻¹</string>
    <string name="atan">tan ⁻¹</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
</resources>
